# scred

./: .dockerignore  .gitignore  ACTION_PLAN_V1_0_TO_V1_2.md  AGENT.md  ALL_WORK_COMPLETE_FINAL.md  ARCHITECTURAL_OPTIONS.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT_FINAL.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_ISSUE_STREAMING.md  ARCHITECTURE_PATTERN_MISMATCH_ANALYSIS.md  ARCHITECTURE_PATTERN_UNIFICATION.md  ARCHITECTURE_REFACTOR.md  ASSESSMENT_AND_PHASE_6_PLAN.txt  ASSESSMENT_SUMMARY.md  AUDIT_FINAL_CORRECTED_SUMMARY.md  AUDIT_SUMMARY.md  AUTORESEARCH_COMPLETE.md  AUTORESEARCH_COMPLETE_CYCLE_FINAL.md  AUTORESEARCH_COMPLETE_FINAL_REPORT.md  AUTORESEARCH_COMPLETE_REPORT.md  AUTORESEARCH_COMPLETION_REPORT.md  AUTORESEARCH_FINAL_COMPLETE_REPORT.md  AUTORESEARCH_FINAL_RESULTS.md  AUTORESEARCH_FINAL_STATUS.md  AUTORESEARCH_FINAL_SUMMARY.md  AUTORESEARCH_LOOP_COMPLETE.md  AUTORESEARCH_OPTIMIZATION_COMPLETE.md  AUTORESEARCH_OPTIMIZATION_LIMIT_REACHED.md  AUTORESEARCH_OPTIMIZATION_PLAN.md  AUTORESEARCH_PART3_PROGRESS.md  AUTORESEARCH_SESSION8_FINAL.md  AUTORESEARCH_SESSIONS_1_12_COMPLETE.md  AUTORESEARCH_SESSIONS_8_11_FINAL.md  AUTORESEARCH_SESSION_COMPLETE.md  AUTORESEARCH_SESSION_FINAL_SUMMARY.md  AUTORESEARCH_SESSION_PART2_SUMMARY.md  AUTORESEARCH_SESSION_SUMMARY.md  (+458 more)
crates/scred-bin-preload/: Cargo.toml  build.rs  symbols.txt  wrapper.c
crates/scred-bin-preload/src/: lib.rs
crates/scred-cli/: Cargo.toml  build.rs
crates/scred-cli/src/: env_detection.rs  env_mode.rs  main.rs  streaming.rs
crates/scred-config/: Cargo.toml
crates/scred-config/src/: hot_reload.rs  lib.rs  policy.rs
crates/scred-config/tests/: integration_tests.rs
crates/scred-debug-server/: Cargo.toml
crates/scred-debug-server/src/: main.rs
crates/scred-detector/: Cargo.toml
crates/scred-detector/benches/: charset_simd.rs  pattern_frequency.rs  profile_methods.rs  quick_simd.rs  realistic.rs  redaction.rs  scaling.rs  simd_benchmark.rs  workload_variations.rs
crates/scred-detector/examples/: validate_debug.rs
crates/scred-detector/src/: batch2_patterns.rs  batch3_patterns.rs  batch4_patterns.rs  batch5_patterns.rs  batch6_patterns.rs  batch7_patterns.rs  detector.rs  lib.rs  lib.rs.bak  match_result.rs  pattern_trie.rs  patterns.rs  prefix_index.rs  regex_patterns.rs  simd_charset.rs  simd_core.rs  simd_memchr.rs  simd_multi_search.rs  simd_pattern_matching.rs  simd_validation.rs  threshold_test.rs  uri_patterns.rs  vectorized_pattern_matching.rs
crates/scred-detector/tests/: batch1_tdd_tests.rs  env_key_value_patterns.rs
crates/scred-fuse/: Cargo.toml  Containerfile
crates/scred-fuse/src/: fs.rs  lib.rs  main.rs
crates/scred-fuse/tests/: cache_and_symlink.rs  layout.rs  selector.rs  snapshot.rs  visibility.rs
crates/scred-http/: Cargo.toml  test_hpack.rs
crates/scred-http-detector/: Cargo.toml
crates/scred-http-detector/src/: analyzer.rs  body_analysis.rs  classification.rs  header_analysis.rs  lib.rs  models.rs
crates/scred-http-redactor/: Cargo.toml
crates/scred-http-redactor/src/: body_redaction.rs  core.rs  header_redaction.rs  lib.rs  models.rs  protocol.rs  streaming_redaction.rs
crates/scred-http/src/: cached_dns_resolver.rs  chunked_parser.rs  config.rs  configurable_engine.rs  connect.rs  connection_pool.rs  dns_cache.rs  dns_resolver.rs  duplex.rs  env_detection.rs  fixed_upstream.rs  header_rewriter.rs  host_identification.rs  http_headers.rs  http_line_reader.rs  http_proxy_handler.rs  http_proxy_handler.rs.bak  lib.rs  location_rewriter.rs  logging.rs  models.rs  multi_upstream_pool.rs  optimized_dns_resolver.rs  parser.rs  pattern_metadata.rs  pattern_selector.rs  pattern_selector.rs.unused  policy_handler.rs  pooled_dns_resolver.rs  proxy_resolver.rs  proxy_resolver.rs.bak  response_reader.rs  secrets.rs  streaming_policy.rs  streaming_request.rs  streaming_response.rs  tcp_relay.rs  tls_roots.rs  upstream_connection.rs  upstream_h2_client.rs
crates/scred-http/tests/: false_positive_wikipedia.rs  h2_frame_forwarder_integration.rs.disabled  h2_header_redaction_e2e.rs  h2_redaction_integration.rs  h2_upstream_client_integration.rs.disabled  pattern_type_selector_tests.rs.disabled  phase3_handler_selector_tests.rs  phase6_http_redaction_selector_tests.rs  security_audit_selective_unredate.rs  security_integration_tests.rs  streaming_integration.rs  v101_critical_fixes.rs  v101_critical_fixes.rs.disabled
crates/scred-mitm/: Cargo.toml
crates/scred-mitm/src/: lib.rs  main.rs  policy_integration.rs
crates/scred-mitm/tests/: body_propagation_tests.rs  e2e_httpbin.rs  e2e_simple.rs  h2_compliance.rs  h2_full_integration.rs  h2_integration_real.rs.disabled  h2_phases_1_4_integration.rs.disabled  h2_proxy_bridge_integration.rs  h2_real_mitm_integration.rs  headers_body_redaction.rs  http2_integration.rs.disabled  integration_body_tests.rs  integration_test.rs  pattern_filtering_integration.rs  phase7_h2_selector_redaction_tests.rs  redaction_isolation.rs
crates/scred-pattern-detector/: Cargo.toml  PRODUCTION_PATTERNS_V2.md  README.md  build.rs  build.zig  build_bench.sh  check_stripe.zig  test_patterns.zig
crates/scred-pattern-detector/src/: allocator_fixed.zig  allocator_pool.zig  allocator_safe.zig  benchmark.zig  content_analysis.zig  detector_ffi.zig  detectors.zig  env_redactor.zig  fast_regex.zig  lib.rs  lib.zig  pattern_trie.zig  patterns.zig  patterns.zig.bak  patterns.zig.phase2.bak  patterns.zig.phase3.bak  patterns.zig.phase4.bak  patterns.zig.phase5.bak  patterns.zig.phase6.bak  patterns.zig.phase7.bak  patterns.zig.phase8.bak  patterns.zig.phase9.bak  redaction_ffi.zig  redaction_impl.zig  redaction_stub.zig  regex_engine.zig  simd_core.zig  simd_match.zig  simd_wrapper.zig  streaming_test.zig  validation.zig
crates/scred-pattern-detector/tests/: classification_test.rs  (+12 more)
crates/scred-policy/: Cargo.toml
crates/scred-proxy/: Cargo.toml  Dockerfile
crates/scred-readctor-framering/: Cargo.toml
crates/scred-redactor/: Cargo.toml  Cargo.toml.lto  build.rs  libscred_pattern_detector.a.keep
(+214 files in other folders)
