[workspace]
members = [
    "crates/scred-cli",
    "crates/scred-config",
    "crates/scred-debug-server",
    "crates/scred-detector",
    "crates/scred-http",
    "crates/scred-mitm",
    "crates/scred-policy",
    "crates/scred-proxy",
    "crates/scred-redactor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SCRED Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rustls = "0.21"
rustls-pki-types = "1"
rustls-pemfile = "2"
tokio-rustls = "0.24"
rcgen = { version = "0.12", features = ["x509-parser"] }
dirs = "5.0"
http2 = "0.5"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
wax = "0.5"
time = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "thin"        # Thin LTO
codegen-units = 1   # Better optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols

# Docker build profile - reduces memory usage during compilation
[profile.docker]
inherits = "release"
opt-level = "z"
lto = false         # Disable LTO to reduce memory
codegen-units = 16  # More parallelism, less memory per unit
panic = "abort"
strip = true

[profile.docker-release]
inherits = "release"
lto = false
codegen-units = 4
strip = true

[profile.bench]
inherits = "release"
