[package]
name = "scred-bin-preload"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LD_PRELOAD hook library for output redaction"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
redhook = "2.0"
scred-detector = { path = "../scred-detector" }
