[package]
name = "scred"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secret redaction CLI tool"

[dependencies]
scred-config = { path = "../scred-config" }
scred-readctor-framering = { path = "../scred-readctor-framering" }
scred-http = { path = "../scred-http" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"

[[bin]]
name = "scred"
path = "src/main.rs"
