[package]
name = "scred"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secret redaction CLI tool"

[dependencies]
scred-config = { path = "../scred-config" }
scred-redactor = { path = "../scred-redactor" }
scred-http = { path = "../scred-http", features = ["redaction"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"

[[bin]]
name = "scred"
path = "src/main.rs"
