[package]
name = "scred-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for SCRED applications"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = "0.2"
tokio = { workspace = true, features = ["sync", "signal"] }
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "scred_config"
path = "src/lib.rs"
