[package]
name = "scred-detector"
version = "0.1.0"
edition = "2021"
authors = ["SCRED Team"]
license = "MIT"

[dependencies]
memchr = "2"
rayon = "1"
num_cpus = "1"
aho-corasick = "1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []

[[bench]]
name = "realistic"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "profile_methods"
harness = false

[[bench]]
name = "workload_variations"
harness = false

[[bench]]
name = "redaction"
harness = false

[[bench]]
name = "pattern_frequency"
harness = false
