[package]
name = "scred-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Read-only FUSE PoC exposing a redacted view of a directory"

[dependencies]
anyhow = { workspace = true }
libc = "0.2"
fuser = { version = "0.14", features = ["abi-7-31"] }
scred-redactor = { path = "../scred-redactor" }
