[package]
name = "scred_http_redactor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
scred-redactor = { path = "../scred-redactor" }
scred_http_detector = { path = "../scred-http-detector" }
http = "1.1"
h2 = "0.4"
tokio = { version = "1.0", features = ["sync", "io-util", "macros"] }
bytes = "1.5"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-util = "0.7"
