[package]
name = "scred-mitm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MITM transparent proxy for secret redaction"

[features]
default = []
# Phase 5: Enable dual-mode proxy (streaming handlers alongside buffered)
streaming_mode = []

[dependencies]
scred-http = { path = "../scred-http" }
scred-redactor = { path = "../scred-redactor" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = "0.25"
rcgen = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }
http = "0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "scred-mitm"
path = "src/main.rs"
