[package]
name = "scred-mitm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MITM transparent proxy with unified policy support"

[features]
default = []
streaming_mode = []

[dependencies]
scred-config = { path = "../scred-config" }
scred-http = { path = "../scred-http" }
scred-redactor = { path = "../scred-redactor" }
scred-policy = { path = "../scred-policy" }
wax = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
time = { workspace = true }
rustls = { workspace = true }
h2 = "0.4"
http = "1.0"
bytes = "1"
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = "0.25"
rcgen = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
notify = "6.0"
x509-parser = "0.16"
pem = "3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "scred-mitm"
path = "src/main.rs"
