[package]
name = "scred-pattern-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "scred_pattern_detector"
path = "src/lib.rs"
