[package]
name = "scred-redactor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core secret pattern redaction engine (244+ patterns)"
build = "build.rs"

[dependencies]
# regex removed - all pattern detection now via Zig FFI (patterns.zig)
serde = { workspace = true }
lazy_static = "1.4"
scred-pattern-detector = { path = "../scred-pattern-detector" }



[[bin]]
name = "perf_bench"
path = "benches/redaction_perf.rs"

[[bin]]
name = "engine_bench"
path = "benches/engine_creation.rs"

[dependencies.aho-corasick]
version = "1.1"
optional = true

[features]
aho-corasick = ["dep:aho-corasick"]

[[bin]]
name = "detailed_profile"
path = "benches/detailed_profile.rs"
[[bin]]
name = "fastpath_test"
path = "benches/fastpath_test.rs"

[[bench]]
name = "streaming_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
