[package]
name = "scred-redactor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core secret pattern redaction engine (244+ patterns)"

[dependencies]
# Pure Rust SIMD pattern detection (no Zig FFI)
serde = { workspace = true }
lazy_static = "1.4"
scred-detector = { path = "../scred-detector" }

[dependencies.aho-corasick]
version = "1.1"
optional = true

[features]
aho-corasick = ["dep:aho-corasick"]

[[bench]]
name = "redaction_perf"
harness = false

[[bench]]
name = "engine_creation"
harness = false

[[bench]]
name = "detailed_profile"
harness = false

[[bench]]
name = "fastpath_test"
harness = false

[[bench]]
name = "streaming_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


